<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/step3TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_card"
        android:text="@string/step3_title"
        android:textColor="@color/coffee_brown"
        android:textSize="@dimen/text_size_label"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/grindStatusRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_card"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/groundRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/grind_status_ground" />

        <RadioButton
            android:id="@+id/wholeBeanRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_card"
            android:text="@string/grind_status_whole_bean" />
    </RadioGroup>

    <TextView
        android:id="@+id/grindTypeResultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_card"
        android:background="@color/card_background"
        android:padding="@dimen/spacing_card"
        android:textSize="@dimen/text_size_label"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/step3BackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_back" />

        <Button
            android:id="@+id/step3ContinueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_card"
            android:layout_weight="1"
            android:text="@string/btn_continue" />
    </LinearLayout>
</LinearLayout>